--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,25 @@ test-ledger
 .DS_Store
 node_modules
 target
+homeworks_rust/homeworks/homework5/functions/functions1
+homeworks_rust/homeworks/homework5/functions/functions2
+homeworks_rust/homeworks/homework5/functions/functions3
+homeworks_rust/homeworks/homework5/functions/functions4
+homeworks_rust/homeworks/homework5/functions/functions5
+homeworks_rust/homeworks/homework5/if/if1
+homeworks_rust/homeworks/homework5/if/if2
+homeworks_rust/homeworks/homework5/primitive_types/primitive_types1
+homeworks_rust/homeworks/homework5/primitive_types/primitive_types2
+homeworks_rust/homeworks/homework5/primitive_types/primitive_types3
+homeworks_rust/homeworks/homework5/primitive_types/primitive_types4
+homeworks_rust/homeworks/homework5/primitive_types/primitive_types5
+homeworks_rust/homeworks/homework5/primitive_types/primitive_types6
+homeworks_rust/homeworks/homework5/standard_library_types/iterators1
+homeworks_rust/homeworks/homework5/strings/strings1
+homeworks_rust/homeworks/homework5/strings/strings2
+homeworks_rust/homeworks/homework5/variables/variables1
+homeworks_rust/homeworks/homework5/variables/variables2
+homeworks_rust/homeworks/homework5/variables/variables3
+homeworks_rust/homeworks/homework5/variables/variables4
+homeworks_rust/homeworks/homework5/variables/variables5
+homeworks_rust/homeworks/homework5/variables/variables6
