Commit running_sums for Homework 6

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ homeworks_rust/homeworks/homework5/variables/variables3
 homeworks_rust/homeworks/homework5/variables/variables4
 homeworks_rust/homeworks/homework5/variables/variables5
 homeworks_rust/homeworks/homework5/variables/variables6
+homeworks_rust/homeworks/homework6/running_sums
